[package]
name = "egui2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.7", features = ["rwh_05"] }
egui = "0.24.1"
egui-wgpu = "0.24.1"
pollster = "0.3.0"
wgpu = "0.18.0"
env_logger = "0.10.1"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0.77"
cfg-if = "1.0.0"
log = "0.4.20"


[profile.dev]
opt-level = 3
