[package]
name = "egui2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


winit = { version = "0.29.7", features = ["rwh_05"] }
egui-wgpu = "0.27.2"
pollster = "0.3.0"
wgpu = "0.19.4"
env_logger = "0.10.1"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0.77"
cfg-if = "1.0.0"
log = "0.4.20"
egui-winit = "0.27.2"
egui = "0.27.2"
[profile.dev]
opt-level = 1
